@@ -1,0 +1,4 @@
+%h3.page-title
+  Are you sure you want to unsubscribe from this thread?
+
+  = link_to "Unsubscribe", unsubscribe_sent_notification_path(@sent_notification, force: true), class: 'btn btn-primary wide'
